--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,61 +1,34 @@
 .message {
-    position: relative;
-    margin-left: 20px;
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: dimgray;
-    width: 200px;
-    height: 50px;
-    text-align: left;
-    font: 400 .9em 'Open Sans', sans-serif;
-    border: 1px solid dimgray;
-    border-radius: 10px;
-}
-.message:after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-top: 15px solid dimgray;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    top: 0;
-    left: -15px;
-}
-
-.message:before {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-top: 17px solid dimgray;
-    border-left: 16px solid transparent;
-    border-right: 16px solid transparent;
-    top: -1px;
-    left: -17px;
+    display: flex;
+    align-items: flex-end;
+    margin: 10px;
 }
 .avatar {
-    width: 45px;
-    height: 45px;
-    border-radius: 45%;
+    width: 50px;
+    height: 50px;
+
+    border-radius: 50%;
 }
 .content {
-    padding: 0;
-    margin: 0;
-    color: whitesmoke;
-    font-weight: bold;
-    position: absolute;
-    font-size: 20px;
-    top: 25px;
-    left: 65px;
+    padding: 10px;
+
+    border-radius: 5px 5px 5px 0;
+    background-color: grey;
+}
+.angle {
+    width: 15px;
+    height: 15px;
+    background: radial-gradient(circle at 0 0, rgba(0, 0, 0, 0) 15px, grey 0);
+}
+ .text {
+     min-width: 150px;
+     max-width: 300px;
+     word-wrap: break-word;
 }
 .name {
     color: white;
     font-weight: lighter;
-    position: absolute;
-    font-size: 10px;
-    top: 5px;
-    left: 65px;
+    font-size: 20px;
 }
 .time {
     position: absolute;
