--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -3,38 +3,42 @@
     align-items: flex-end;
     margin: 10px;
 }
+
 .avatar {
     width: 50px;
     height: 50px;
 
     border-radius: 50%;
 }
+
 .content {
     padding: 10px;
 
     border-radius: 5px 5px 5px 0;
     background-color: grey;
 }
+
 .angle {
     width: 15px;
     height: 15px;
     background: radial-gradient(circle at 0 0, rgba(0, 0, 0, 0) 15px, grey 0);
 }
- .text {
-     min-width: 150px;
-     max-width: 300px;
-     word-wrap: break-word;
+
+.text {
+    min-width: 150px;
+    max-width: 300px;
+    word-wrap: break-word;
 }
+
 .name {
-    color: white;
+
     font-weight: lighter;
     font-size: 20px;
 }
+
 .time {
-    position: absolute;
-    font-size: .85em;
-    font-weight: 300;
-    bottom: 5px;
-    right: 5px;
-    color: white;
+    display: flex;
+    justify-content: flex-end;
+
+    color: black;
 }
