--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,5 +1,21 @@
-.superInput {
+.input:focus {
+    outline: none;
+    border: gold solid 2px;
+}
 
+.superInput {
+    border: 1px solid #cccccc;
+border-radius: 3px;
+-webkit-border-radius: 3px;
+-moz-border-radius: 3px;
+-khtml-border-radius: 3px;
+background: #ffffff !important;
+outline: none;
+height: 24px;
+width: 120px;
+color: #cccccc;
+font-size: 11px;
+font-family: Tahoma;
 }
 
 .errorInput {
