--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,5 +1,16 @@
 .default {
+    background: white;
+    color: #282c34;
+    outline: none;
+}
 
+.button {
+    position: relative;
+    margin: 15px;
+}
+
+.default:disabled {
+    background: black;
 }
 
 .red {
